--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -2,10 +2,22 @@
 {% block title %} <title>Learning Log Topics </title> {% endblock title %}
 
 {% block content %}
-	<h1>Your Topics </h1>
-	<ul>
+	<h1>Topics </h1>
+	<a href="{% url 'add-topic' %}" class="btn btn-primary"> <i class="fa fa-plus"></i> Add Topic</a>
+<hr>
+	<ol>
 		{% for topic in object_list %}
-		<li class="m-2"> <a href="{% url 'update-topic' topic.id %}" class="btn btn-sm btn-primary"> <i class="fa fa-edit"></i> </a> <a href="{% url 'delete-topic' topic.id %}" class="btn btn-sm btn-danger"> <i class="fa fa-trash"></i> </a> {{topic}}</li>
+		<li class="my-4">
+			<p class="lead">{{topic}}</p>
+			<a href="{% url 'update-topic' topic.id %}" class="btn btn-sm btn-success">
+				<i class="fa fa-edit"></i> Edit
+			</a> 
+			
+			<a href="{% url 'delete-topic' topic.id %}" class="btn btn-sm btn-danger">
+				<i class="fa fa-trash"></i> Delete
+			</a>
+		</li>
+
 		{% empty %}
 		<li>No topics to show - <a href="{% url 'add-topic' %}"> Add Topic </a> </li>
 		{% endfor %}
@@ -15,7 +27,7 @@
 			<span class="step-links">
 				{% if page_obj.has_previous %}
 					<a href="?page=1">&laquo; first</a>
-					<a href="?page={{ page_obj.previous_page_number }}">previous</a>
+					<a href="?page={{ page_obj.previous_page_number }}"></a>
 				{% endif %}
 
 				<span class="current">
@@ -30,6 +42,5 @@
 		</div>
 
 		<hr>
-		<a href="{% url 'add-topic' %}" class="btn btn-primary"> <i class="fa fa-plus"></i> Add Topic</a>
-	</ul>
+	</ol>
 {% endblock content %}
