--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -5,7 +5,7 @@
 	<h1>Topics </h1>
 	<a href="{% url 'add-topic' %}" class="btn btn-primary"> <i class="fa fa-plus"></i> Add Topic</a>
 <hr>
-	<ol>
+	<ul>
 		{% for topic in object_list %}
 
 		<li class="my-4">
@@ -26,25 +26,26 @@
 		<li>No topics to show - <a href="{% url 'add-topic' %}"> Add Topic </a> </li>
 		{% endfor %}
 
+	</ul>
 
 		<div class="pagination">
 			<span class="step-links">
 				{% if page_obj.has_previous %}
-					<a href="?page=1">&laquo; first</a>
-					<a href="?page={{ page_obj.previous_page_number }}"></a>
+					<a href="?page=1" class="btn">&laquo;</a>
+					<a href="?page={{ page_obj.previous_page_number }}" class="btn"><i class="fa fa-chevron-left"></i></a>
 				{% endif %}
 
 				<span class="current">
-					Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+					{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
 				</span>
 
 				{% if page_obj.has_next %}
-					<a href="?page={{ page_obj.next_page_number }}">next</a>
-					<a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+					<a href="?page={{ page_obj.next_page_number }}" class="btn"><i class="fa fa-chevron-right"></i></a>
+					<a href="?page={{ page_obj.paginator.num_pages }}" class="btn"> &raquo;</a>
 				{% endif %}
 			</span>
 		</div>
 
 		<hr>
-	</ol>
+
 {% endblock content %}
