--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -20,6 +20,7 @@
 		<ul>
 			<li><a href="{% url 'index' %}">Learning Log</a></li>
 			<li><a href="{% url 'topics' %}">Topics</a></li>
+			<li><a href="{% url 'entries' %}">Entries</a></li>
 		</ul>
 	</header>
 
