--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -5,4 +5,17 @@
 {% block content %}
 	<h1>Welcome To Learning Log!</h1>
 	<p>A platform that enables you keep track of what you learn in multiple topics!</p>
+
+	<div class="container my-4">
+		{% for entry in entries %}
+			<h2>{{entry.entry_title}}</h2>
+			<p>
+				{{entry.entry_text}}
+			</p>
+			
+			<small>{{entry.date_added}} | {{entry.date_added|timesince}} ago | <a href="{% url 'topic-detail' entry.entry_topic.id %}"> <span class="text-small badge badge-dark">{{entry.entry_topic}}</span></a> </small>
+			<hr>
+		{% endfor %}
+	</div>
+	<a href="{% url 'new-entry' %}" class="btn btn-primary"> <i class="fa fa-plus"></i> New Entry </a>
 {% endblock content%}
