--- a/learning_logs/static/css/main.css
+++ b/learning_logs/static/css/main.css
@@ -1,3 +1,32 @@
 body{
 	background: whitesmoke;
 }
+
+.recent-entries{
+	max-width: 800px;
+	background: #fff;
+	padding: 5px;
+	
+}
+
+.home-entry {
+    margin: 20px;
+    background: #f3f3f3;
+    border-radius: 10px;
+    padding: 29px;
+    /* color: #fff; */
+    box-shadow: 0px 12px 20px -18px #000;
+}
+
+.home-entry h3 {
+    font-size: larger;
+    font-family: sans-serif;
+    font-weight: bolder;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.home-entry p {
+    color: #202020;
+    font-size: smaller;
+}
