--- a/learning_logs/templates/learning_logs/entries.html
+++ b/learning_logs/templates/learning_logs/entries.html
@@ -11,5 +11,6 @@
 				</li>
 			{% endfor %}
 		</ul>
+		<a href="{% url 'new-entry' %}" class="btn btn-primary"> <i class="fa fa-plus"></i> New Entry </a>
 	</div>
 {% endblock content %}
