was working with the entries section today

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -21,7 +21,7 @@
 
 	<header class="m-4">
 		<ul>
-			<li><a href="{% url 'index' %}">Learning Log</a></li>
+			<li><a href="{% url 'index' %}">Home</a></li>
 			<li><a href="{% url 'topics' %}">Topics</a></li>
 			<li><a href="{% url 'entries' %}">Entries</a></li>
 		</ul>
