--- a/learning_logs/templates/learning_logs/topic_confirm_delete.html
+++ b/learning_logs/templates/learning_logs/topic_confirm_delete.html
@@ -5,10 +5,15 @@
 
 {% block content %}
 	<h1>Delete {{topic}}?</h1>
-	<p>You won't recover this topic once it is deleted from the database</p>
+	<p>You won't recover this topic and all content in this topic once it is deleted from the database.</p>
+	<ul>
+		{% for entries in topic.entry_set.all %}
+		<li>{{entries}}</li>
+		{% endfor %}
+	</ul>
 	<form action="" method="post">
 		{% csrf_token %}
-		<input type="submit" value="Yes" class="btn btn-danger">
 		<a href="{% url 'topics' %}" class="btn btn-success">No</a>
+		<input type="submit" value="Yes" class="btn btn-danger">
 	</form>
 {% endblock content %}
