--- a/learning_logs/static/css/main.css
+++ b/learning_logs/static/css/main.css
@@ -4,7 +4,7 @@ body{
 
 .recent-entries{
 	max-width: 800px;
-	background: #fff;
+	background: transparent;
 	padding: 5px;
 	
 }
@@ -13,7 +13,7 @@ body{
     margin: 20px;
     background: #f3f3f3;
     border-radius: 10px;
-    padding: 29px;
+    padding: 5px;
     /* color: #fff; */
     box-shadow: 0px 12px 20px -18px #000;
 }
