--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -23,7 +23,7 @@
 		</li>
 
 		{% empty %}
-		<li>No topics to show - <a href="{% url 'add-topic' %}"> Add Topic </a> </li>
+		<li>No topics to show. Add new topics, and they will show here. </li>
 		{% endfor %}
 
 	</ul>
