--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -10,7 +10,11 @@
 	</div>
 
 	<div class="container recent-entries">
-		<h2 class="my-4 text-center">Recent Entries </h2>
+		<h2 class="my-4 text-center">Recent Entries ({{entry_count}}) </h2>
+		<div class="text-center">
+			<a href="{% url 'new-entry' %}" class="btn btn-sm btn-primary"> <i class="fa fa-plus"></i> Create New Entry </a>
+			<a href="{% url 'add-topic' %}" class="btn btn-sm btn-primary"> <i class="fa fa-plus"></i> Add Topic</a>
+		</div>
 		{% for entry in entries %}
 			
 			<div class="home-entry p-5">
@@ -19,10 +23,8 @@
 					{{entry.entry_text}}
 				</p>
 				
-				<small>{{entry.date_added}} | {{entry.date_added|timesince}} ago | <a href="{% url 'topic-detail' entry.entry_topic.id %}"> <span class="text-small badge badge-dark">{{entry.entry_topic}}</span></a> </small>
+				<small>{{entry.date_added|date:'M d, y'}} | {{entry.date_added|timesince}} ago | <a href="{% url 'topic-detail' entry.entry_topic.id %}"> <span class="text-small badge badge-dark">{{entry.entry_topic}}</span></a> </small>
 				<hr>
-				
-				
 
 			</div>
 
