added user aunthentication

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -20,10 +20,13 @@
 <body>
 
 	<header class="m-4">
-		<ul>
+		<ul class="sidebar-nav">
 			<li><a href="{% url 'index' %}">Home</a></li>
 			<li><a href="{% url 'topics' %}">Topics</a></li>
 			<li><a href="{% url 'entries' %}">Entries</a></li>
+			{% if user.is_authenticated %}
+			<li><a href="{% url 'logout' %}">Logout</a></li>
+			{% endif %}
 		</ul>
 	</header>
 
