--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -4,19 +4,24 @@
 
 {% block content %}
 
-	<div class="text-center">
+	<div class="text-center container">
 		{% if user.is_authenticated %}
 		<h1>Welcome, {{user.username|title}}! </h1>
-		<p>Keep track of what you are learning in multiple topics.</p>
+		<p class="lead">
+			{{user|title}}, Lets keep your notes organised with this learning log.
+			Browse topics you have created and see all notes you added in those topics.
+		</p>
 
 		<div class="text-center">
-			<a href="{% url 'new-entry' %}" class="btn btn-sm btn-primary"> <i class="fa fa-plus"></i> Create New Entry </a>
-			<a href="{% url 'add-topic' %}" class="btn btn-sm btn-primary"> <i class="fa fa-plus"></i> Add Topic</a>
+			<a href="{% url 'topics' %}" class="btn btn-sm btn-primary">  View Your Topics  <i class="fa fa-chevron-right"></i> </a>
 		</div>
 
-		{% else %}
-		<h1>Welcome To Learning Log!</h1>
-		<p class="lead">Learning Log helps you keep track of what you learn in different topics.</p>
+		{% else  %}
+		<p>
+			Make your own Learning Log, and keep a list of the topics you're learning about.
+			Whenever you learn something new about a topic, make an entry summarizing what you've learned.
+		</p>
+
 		<a href="{% url 'login' %}" class="btn btn-primary">Register</a>
 		<a href="{% url 'login' %}" class="btn btn-white"> <i class="fa fa-sign-in"></i> Login Now </a>
 		{% endif %}
