--- a/learning_logs/templates/learning_logs/add-topic.html
+++ b/learning_logs/templates/learning_logs/add-topic.html
@@ -6,7 +6,7 @@
 	<div>
 		<form action="" method="post">
 			{% csrf_token %}
-			{{form.as_table}}
+			{{form.as_p}}
 			<input type="submit" value="Add Topic">
 		</form>
 	</div>
