--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -19,7 +19,7 @@
 				<i class="fa fa-trash"></i> 
 			</a>
 
-			<p><small>Added {{topic.date_added|timesince}} ago. | Edited {{ topic.time_edited | timesince}} ago</small></p>
+			<p><small>Added on {{topic.date_added|date:'M d, y'}}</small></p>
 			<hr>
 		</li>
 
