fixed some bugs that were caused by a wrong variable name

--- a/learning_logs/templates/learning_logs/delete-entry.html
+++ b/learning_logs/templates/learning_logs/delete-entry.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>Confirm You Want To Delete An Entry.</h1>
-<p>You are about to delete the entry: <strong>{{entry.entry_title}}</strong>, in the topic <strong>{{entry.entry_topic}}</strong><br>
+<p>You are about to delete the entry: <strong>{{entry.entry_title}}</strong>, in the topic <strong>{{entry.topic}}</strong><br>
 	Once this entry is deleted from the database, you won't recover it
 </p>
 
