finally added the registration function

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -22,7 +22,7 @@
 			Whenever you learn something new about a topic, make an entry summarizing what you've learned.
 		</p>
 
-		<a href="{% url 'login' %}" class="btn btn-primary">Register</a>
+		<a href="{% url 'register' %}" class="btn btn-primary">Register</a>
 		<a href="{% url 'login' %}" class="btn btn-white"> <i class="fa fa-sign-in"></i> Login Now </a>
 		{% endif %}
 	</div>
