changed a few things to enhance UX

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -17,6 +17,7 @@
 		</div>
 
 		{% else  %}
+		<h1>Welcome To Learning Logs!</h1>
 		<p>
 			Make your own Learning Log, and keep a list of the topics you're learning about.
 			Whenever you learn something new about a topic, make an entry summarizing what you've learned.
