--- a/learning_logs/templates/learning_logs/topic-detail.html
+++ b/learning_logs/templates/learning_logs/topic-detail.html
@@ -10,12 +10,17 @@
 		<ul>
 			{% for entries in topic.entry_set.all %}
 				<li>
-					<h2>{{entries.entry_title}}</h2>
-					<p>{{entries.entry_text}}</p>
+					<h2>{{entries.entry_title|title}}</h2>
+					<p class="lead">{{entries.entry_text}}</p>
+					<p><small>{{entries.date_added|date:'d M y - h:i A'}}</small></p>
 
-					<p><small><a class="btn btn-sm btn-dark" href="{% url 'edit-entry' entries.id %}"><span class="fa fa-edit"></span></a> | <a class="btn btn-sm btn-dark" href="{% url 'delete-entry' entries.id %}"><span class="fa fa-trash"></span></a></small></p>
+					<p><small><a class="btn btn-sm btn-dark" href="{% url 'edit-entry' entries.id %}"><span class="fa fa-edit"></span> Edit</a> | <a class="btn btn-sm btn-dark" href="{% url 'delete-entry' entries.id %}"><span class="fa fa-trash"></span> Delete</a></small></p>
 					<hr>
 				</li>
+			{% empty %}
+			<li>No Entries were found for this topic. <br> 
+				When you add entries for <strong>{{topic}}</strong>, you will find them here.
+			</li>
 			{% endfor %}
 		</ul>
 	</div>
