--- a/learning_logs/static/css/main.css
+++ b/learning_logs/static/css/main.css
@@ -2,31 +2,22 @@ body{
 	background: whitesmoke;
 }
 
-.recent-entries{
-	max-width: 800px;
-	background: transparent;
-	padding: 5px;
-	
+h1 {
+    font-size: xx-large;
+    color: #085191;
 }
 
-.home-entry {
-    margin: 20px;
-    background: #f3f3f3;
-    border-radius: 10px;
-    padding: 5px;
-    /* color: #fff; */
-    box-shadow: 0px 12px 20px -18px #000;
-}
-
-.home-entry h3 {
+h2{
     font-size: larger;
-    font-family: sans-serif;
-    font-weight: bolder;
-    margin-bottom: 20px;
-    text-transform: capitalize;
 }
 
-.home-entry p {
-    color: #202020;
-    font-size: smaller;
+.entry {
+    background: #d9d9d9;
+    padding: 20px;
+    margin: 30px 0px;
+    max-width: 600px;
+}
+
+ul {
+    padding: 0;
 }
