--- a/learning_logs/templates/learning_logs/topic-detail.html
+++ b/learning_logs/templates/learning_logs/topic-detail.html
@@ -9,9 +9,9 @@
 	<div class="container my-4">
 		<ul>
 			{% for entries in topic.entry_set.all %}
-				<li>
+				<li class="entry">
 					<h2>{{entries.entry_title|title}}</h2>
-					<p class="lead">{{entries.entry_text}}</p>
+					<p>{{entries.entry_text}}</p>
 					<p><small>{{entries.date_added|date:'d M y - h:i A'}}</small></p>
 
 					<p><small><a class="btn btn-sm btn-dark" href="{% url 'edit-entry' entries.id %}"><span class="fa fa-edit"></span> Edit</a> | <a class="btn btn-sm btn-dark" href="{% url 'delete-entry' entries.id %}"><span class="fa fa-trash"></span> Delete</a></small></p>
