--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -19,7 +19,7 @@
 				<i class="fa fa-trash"></i> 
 			</a>
 
-			<p><small> {{topic.date_added|date:'M d, y'}} | {{topic.date_added|date:'h:m a'}}</small></p>
+			<p><small> {{topic.date_added|date:'M d, y'}} | {{topic.date_added|date:'h:i a'}}</small></p>
 			<hr>
 		</li>
 
