--- a/learning_logs/templates/learning_logs/create_entry.html
+++ b/learning_logs/templates/learning_logs/create_entry.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<div class="container">
-		<form action="" method="post">
+		<form action="" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			{{ form.as_p }}
 			<input type="submit" class="btn btn-primary" value="Post">
